5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1585_842.log
== TEST (2019-03-25 13:10:05) 
-- CODE:
num = int(input("numero "))
cal = num//%4
print(cal)

-- ERROR:
File "XXXX", line 2
    cal = num//%4
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:10:14) 
-- CODE:
num = int(input("numero "))
cal = num//4
print(cal)

-- OUTPUT:
2293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:22:48) 
-- CODE:
num = int(input("numero de quatro digitos"))
cal1 = num//1000
cal2 = num//100 - cal1*10
cal3 = num//10 - cal1*10 - cal2*10
cal4 = num - cal1*10 - cal2*10 - cal3*10


print(cal1 + cal2 + cal3 + cal4 )

-- OUTPUT:
1730
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:25:36) 
-- CODE:
num = int(input("numero de quatro digitos"))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (cal1*10) - cal2*10
cal4 = num - cal1*10 - cal2*10 - cal3*10

print(cal1)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:26:01) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (cal1*10) - cal2*10
cal4 = num - cal1*10 - cal2*10 - cal3*10

print(cal2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:26:18) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (cal1*10) - cal2*10
cal4 = num - cal1*10 - cal2*10 - cal3*10

print(cal3)
-- OUTPUT:
817
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:27:27) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num - cal1*10 - cal2*10 - cal3*10

print(cal3)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:28:05) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal4)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:28:50) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal4)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:29:06) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal3)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:11) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal4)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:57) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal1 + cal2 + cal3 + cal4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:32:09) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal1 + cal2 + cal3 + cal4)
-- EXECUTION TIME:
0.245267
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:06) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num

print(cal3)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:57) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num

print(cal1 + cal2 + cal3 + cal4)
-- OUTPUT:
9190
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:37) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%num

print(cal1 + cal2 + cal3 + cal4)
-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:22) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal1

print(cal1 + cal2 + cal3 + cal4)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:56) 
-- CODE:
num = int(input("numero de quatro digitos "))
cal1 = num//1000
cal2 = num//100 - (cal1*10)
cal3 = num//10 - (num//100)*10
cal4 = num%cal3

print(cal1 + cal2 + cal3 + cal4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
